# margo-specification

./: mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
system-design/: index.md
system-design/app-interoperability/: publishing-application-observability-data.md
system-design/device-interoperability/: collecting-application-observability-data.md  device-requirements.md
system-design/margo-overview/: application-observability-overview.md
system-design/orchestration/workload/: consuming-application-observability-data.md  device-capability-reporting.md  workload-deployment.md  workload-orchestration-edge-onboarding.md
